--- a/DataMaster/views/editor/level/levelUpdatedSingle.pug
+++ b/DataMaster/views/editor/level/levelUpdatedSingle.pug
@@ -1,10 +1,10 @@
 div(class='container')
 
     div(class='row')
-        button(class='btn btn-primary col-sm-4' fishroute='/editor/npc/home') NPC List
+        button(class='btn btn-primary col-sm-4' fishroute='/editor/level/home') Level List
         button(class='btn btn-info col-sm-4'
-            fishroute='/editor/npc/edit/' + result.id
-            id='buttonEditNpc'+result.id) Make more changes
+            fishroute='/editor/level/edit/' + result.id
+            id='buttonEditLevel'+result.id) Make more changes
         a(class='btn btn-primary col-sm-4' href='/' id='buttonCancel') Home
 
 
