--- a/DataMaster/views/editor/level/mixins-level.pug
+++ b/DataMaster/views/editor/level/mixins-level.pug
@@ -16,6 +16,6 @@ mixin levelListItem(level)
                 .col-xs-12 #{level.nextLevelId}
             div.col-sm-3.col-xs-12
                 button(class='btn btn-primary btn-lg btn-block'
-                fishroute='/editor/level/' + level._id
+                fishroute='/editor/level/edit/' + level._id
                 id='buttonEditLevel'+level._id
                 ) edit
